solved minor bugs + updated data

--- a/in/bibtex/biblio.bib
+++ b/in/bibtex/biblio.bib
@@ -56,6 +56,20 @@
   timestamp = {2017.06.15},
 }
 
+@Article{Alexe2004,
+  author    = {Alexe, G. and Alexe, S. and Crama, Y. and Foldes, S. and Hammer, P. L. and Simeone, B.},
+  title     = {Consensus algorithms for the generation of all maximal bicliques},
+  journal   = {Discrete Applied Mathematics},
+  year      = {2004},
+  volume    = {145},
+  number    = {1},
+  pages     = {11-21},
+  doi       = {10.1016/j.dam.2003.09.004},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
+}
+
 @InCollection{Al-kazemi2005,
   author    = {Al-kazemi, B. and Mohan, C. K.},
   title     = {Discrete Multi-Phase Particle Swarm Optimization},
@@ -166,6 +180,20 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.05.12},
+}
+
+@Article{Aral1999,
+  author    = {Aral, S. O. and Hughes, J. P. and Stoner, B. and Whittington, W. and Handsfield, H. H. and Anderson, R. M. and Holmes, K. K.},
+  title     = {Sexual mixing patterns in the spread of gonococcal and chlamydial infections},
+  journal   = {American Journal of Public Health},
+  year      = {1999},
+  volume    = {89},
+  number    = {6},
+  pages     = {825--833},
+  doi       = {10.2105/ajph.89.6.825},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
 }
 
 @Article{Aref2016,
@@ -494,6 +522,20 @@
   timestamp     = {2017.06.11},
 }
 
+@Article{Binder1992,
+  author    = {Binder, K. and Reger, J. D.},
+  title     = {Theory of orientational glasses models, concepts, simulations},
+  journal   = {Advances in Physics},
+  year      = {1992},
+  volume    = {41},
+  number    = {6},
+  pages     = {547-627},
+  doi       = {10.1080/00018739200101553},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
+}
+
 @Article{Biswal2010,
   author    = {Biswal, B. B. and Mennes, M. and Zuo, X. N. and Gohel, S. and Kelly, C. and Smith, S. M. and Beckmann, C. F. and Adelstein, J. S. and Buckner, R. L. and Colcombe, S. and Dogonowski, A. M. and Ernst, M. and Fair, D. and Hampson, M. and Hoptman, M. J. and Hyde, J. S. and Kiviniemi, V. J. and Kotter, R. and Li, S. J. and Lin, C. P. and Lowe, M. J. and Mackay, C. and Madden, D. J. and Madsen, K. H. and Margulies, D. S. and Mayberg, H. S. and McMahon, K. and Monk, C. S. and Mostofsky, S. H. and Nagel, B. J. and Pekar, J. J. and Peltier, S. J. and Petersen, S. E. and Riedl, V. and Rombouts, S. A. and Rypma, B. and Schlaggar, B. L. and Schmidt, S. and Seidler, R. D. and Siegle, G. J. and Sorg, C. and Teng, G. J. and Veijola, J. and Villringer, A. and Walter, M. and Wang, L. and Weng, X. C. and Whitfield-Gabrieli, S. and Williamson, P. and Windischberger, C. and Zang, Y. F. and Zhang, H. Y. and Castellanos, F. X. and Milham, M. P.},
   title     = {Toward discovery science of human brain function},
@@ -522,6 +564,20 @@
   groups    = {Graph Partitioning, Ignored},
   owner     = {Vincent},
   timestamp = {2010.06.03},
+}
+
+@Article{Boettcher2001,
+  author    = {Boettcher, S. and Percus, A. G.},
+  title     = {Optimization with Extremal Dynamics},
+  journal   = {Physical Review Letters},
+  year      = {2001},
+  volume    = {86},
+  number    = {23},
+  pages     = {5211--5214},
+  doi       = {10.1103/physrevlett.86.5211},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
 }
 
 @InProceedings{Bogdanov2010,
@@ -727,6 +783,20 @@
   timestamp = {2015.09.22},
 }
 
+@Article{Cambria2013,
+  author    = {Cambria, E. and Schuller, B. and Xia, Y. and Havasi, C.},
+  title     = {New Avenues in Opinion Mining and Sentiment Analysis},
+  journal   = {IEEE Intelligent Systems},
+  year      = {2013},
+  volume    = {28},
+  number    = {2},
+  pages     = {15--21},
+  doi       = {10.1109/mis.2013.30},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
+}
+
 @Article{Cartwright1956,
   author    = {Cartwright, D. and Harary, F.},
   title     = {Structural balance: A generalization of Heider's theory},
@@ -796,6 +866,17 @@
   owner         = {Vincent},
   timestamp     = {2017.05.12},
   url           = {https://arxiv.org/abs/1705.04254},
+}
+
+@InProceedings{Chaudhuri2009,
+  author    = {Chaudhuri, K. and Kakade, S. M. and Livescu, K. and Sridharan, K.},
+  title     = {Multi-view clustering via canonical correlation analysis},
+  booktitle = {26th Annual International Conference on Machine Learning},
+  year      = {2009},
+  doi       = {10.1145/1553374.1553391},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
 }
 
 @InProceedings{Chen2010f,
@@ -1052,6 +1133,34 @@
   timestamp = {2013.12.12},
 }
 
+@Article{Cwilich1989,
+  author    = {Cwilich, G. and Kirpatrick, T. R.},
+  title     = {Mean-field theory and fluctuations in Potts spin glasses. I},
+  journal   = {Journal of Physics A},
+  year      = {1989},
+  volume    = {22},
+  number    = {22},
+  pages     = {4971-4987},
+  doi       = {10.1088/0305-4470/22/22/023},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
+}
+
+@Article{Daolio2011,
+  author    = {Daolio, F. and Tomassini, M. and Vérel, S. and Ochoa, G.},
+  title     = {Communities of minima in local optima networks of combinatorial spaces},
+  journal   = {Physica A},
+  year      = {2011},
+  volume    = {390},
+  number    = {9},
+  pages     = {1684-1694},
+  doi       = {10.1016/j.physa.2011.01.005},
+  file      = {:Communities of minima in local optima networks of combinatorial spaces.pdf:PDF},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
+}
+
 @Article{DasGupta2007,
   author    = {DasGupta, B. and Enciso, G. A. and Sontag, E. and Zhang, Y.},
   title     = {Algorithmic and complexity results for decompositions of biological networks into monotone subsystems},
@@ -1065,6 +1174,34 @@
   groups    = {Graph Partitioning, _To do},
   owner     = {Vincent},
   timestamp = {2017.04.09},
+}
+
+@Article{Dasgupta2007,
+  author    = {Dasgupta, I. and Kanbur, R.},
+  title     = {Community and class antagonism},
+  journal   = {Journal of Public Economics},
+  year      = {2007},
+  volume    = {91},
+  number    = {9},
+  pages     = {1816--1842},
+  doi       = {10.1016/j.jpubeco.2007.03.004},
+  groups    = {Graph Partitioning},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
+}
+
+@Article{Dasgupta2009,
+  author    = {Dasgupta, I.},
+  title     = {Living wage, class conflict and ethnic strife},
+  journal   = {Journal of Economic Behavior \& Organization},
+  year      = {2009},
+  volume    = {72},
+  number    = {2},
+  pages     = {750-765},
+  doi       = {10.1016/j.jebo.2009.07.009},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
 }
 
 @Article{Davis1967,
@@ -1129,6 +1266,20 @@
   timestamp = {2017.04.26},
 }
 
+@Article{Denrell2005,
+  author    = {Denrell, J.},
+  title     = {Why Most People Disapprove of Me: Experience Sampling in Impression Formation},
+  journal   = {Psychological Review},
+  year      = {2005},
+  volume    = {112},
+  number    = {4},
+  pages     = {951-978},
+  doi       = {10.1037/0033-295x.112.4.951},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
+}
+
 @Article{Desai1994,
   author    = {Desai, M. and Rao, V.},
   title     = {A characterization of the smallest eigenvalue of a graph},
@@ -1159,6 +1310,17 @@
   timestamp = {2017.06.15},
 }
 
+@InProceedings{Dhillon2004,
+  author    = {Dhillon, I. S. and Guan, Y. and Kulis, B.},
+  title     = {Kernel k-means},
+  booktitle = {ACM/SIGKDD International Conference on Knowledge discovery and Data Mining},
+  year      = {2004},
+  doi       = {10.1145/1014052.1014118},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
+}
+
 @InProceedings{Dhillon2005,
   author    = {Dhillon, I. and Guan, Y. and Kulis, B.},
   title     = {A fast kernel-based multilevel algorithm for graph clustering},
@@ -1166,6 +1328,35 @@
   year      = {2005},
   doi       = {10.1145/1081870.1081948},
   groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
+}
+
+@Article{Dhillon2007,
+  author    = {Dhillon, I. S. and Guan, Y. and Kulis, B.},
+  title     = {Weighted graph cuts without eigenvectors: A multilevel approach},
+  journal   = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  year      = {2007},
+  volume    = {29},
+  number    = {11},
+  pages     = {1944-1957},
+  doi       = {10.1109/TPAMI.2007.1115},
+  file      = {:Weighted Graph Cuts without Eigenvectors A Multilevel Approach.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2010.12.31},
+}
+
+@Article{Dillmann1998,
+  author    = {Dillmann, O. and Janke, W. and Binder, K.},
+  title     = {Finite-Size Scaling in the p-State Mean-Field Potts Glass: A Monte Carlo Investigation},
+  journal   = {Journal of Statistical Physics},
+  year      = {1998},
+  volume    = {92},
+  number    = {1/2},
+  pages     = {57-100},
+  doi       = {10.1023/a:1023043602398},
+  groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.28},
 }
@@ -1302,6 +1493,18 @@
   timestamp     = {2017.06.01},
 }
 
+@InProceedings{Du2007a,
+  author    = {Du, N. and Wu, B. and Pei, X. and Wang, B. and Xu, L.},
+  title     = {Community detection in large-scale social networks},
+  booktitle = {9th WebKDD and 1st SNA-KDD 2007 Workshop on Web Mining and Social Network Analysis},
+  year      = {2007},
+  doi       = {10.1145/1348549.1348552},
+  file      = {:Community Detection in Large-Scale Social Networks.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2012.05.01},
+}
+
 @InProceedings{DuBois2009,
   author        = {DuBois, T. and Golbeck, J. and Kleint, J. and Srinivasan, A.},
   title         = {Improving Recommendation Accuracy by Clustering Social Networks with Trust},
@@ -1346,6 +1549,20 @@
   url       = {http://dl.acm.org/citation.cfm?id=1805895},
 }
 
+@Article{Elderfield1983,
+  author    = {Elderfield, D. and Sherrington, D.},
+  title     = {The curious case of the Potts spin glass},
+  journal   = {Journal of Physics C},
+  year      = {1983},
+  volume    = {16},
+  number    = {15},
+  pages     = {L497-L503},
+  doi       = {10.1088/0022-3719/16/15/003},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
+}
+
 @Article{ElMaftouhi2012,
   author    = {El Maftouhi, A. and Manoussakis, Y. and Megalakaki, O.},
   title     = {Balance in random signed graphs},
@@ -1359,6 +1576,20 @@
   groups    = {Just balance, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.15},
+}
+
+@Article{Erzan1983,
+  author    = {Erzan, A. and Lage, E. J. S.},
+  title     = {The infinite-ranged Potts spin glass model},
+  journal   = {Journal of Physics C},
+  year      = {1983},
+  volume    = {16},
+  number    = {17},
+  pages     = {L555-L560},
+  doi       = {10.1088/0022-3719/16/17/002},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
 }
 
 @Article{Esmailian2014,
@@ -1541,6 +1772,34 @@
   timestamp = {2017.06.23},
 }
 
+@Article{Florian2000,
+  author    = {Florian, R. and Galam, S.},
+  title     = {Optimizing conflicts in the formation of strategic alliances},
+  journal   = {European Physical Journal B},
+  year      = {2000},
+  volume    = {16},
+  number    = {1},
+  pages     = {189-194},
+  doi       = {10.1007/s100510070264},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
+}
+
+@Article{Frazier2005,
+  author    = {Frazier, J. A. and Chiu, S. and Breeze, J. L. and Makris, N. and Lange, N. and Kennedy, D. N. and Herbert, M. R. and Bent, E. K. and Koneru, V. K. and Dieterich, M. E. and Hodge, S. M. and Rauch, S. L. and Grant, P. E. and Cohen, B. M. and Seidman, L. J. and Caviness, V. S. and Biederman, J.},
+  title     = {Structural Brain Magnetic Resonance Imaging of Limbic and Thalamic Volumes in Pediatric Bipolar Disorder},
+  journal   = {American Journal of Psychiatry},
+  year      = {2005},
+  volume    = {162},
+  number    = {7},
+  pages     = {1256--1265},
+  doi       = {10.1176/appi.ajp.162.7.1256},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
+}
+
 @Article{Friedkin1991,
   author    = {Friedkin, N. E.},
   title     = {Theoretical Foundations for Centrality Measures},
@@ -1621,6 +1880,20 @@
   groups    = {Found},
   owner     = {Vincent},
   timestamp = {2015.08.09},
+}
+
+@Article{Gangemi2014,
+  author    = {Gangemi, A. and Presutti, V. and Recupero, D. R.},
+  title     = {Frame-Based Detection of Opinion Holders and Topics: A Model and a Tool},
+  journal   = {IEEE Computational Intelligence Magazine},
+  year      = {2014},
+  volume    = {9},
+  number    = {1},
+  pages     = {20-30},
+  doi       = {10.1109/mci.2013.2291688},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
 }
 
 @Article{Gao2015,
@@ -1910,6 +2183,20 @@
   owner     = {Vincent},
   timestamp = {2017.05.31},
   url       = {http://www.cambridge.org/catalogue/catalogue.asp?isbn=0521273110},
+}
+
+@Article{Hagmann2008,
+  author    = {Hagmann, P. and Cammoun, L. and Gigandet, X. and Meuli, R. and Honey, C. J. and Wedeen, V. J. and Sporns, O.},
+  title     = {Mapping the Structural Core of Human Cerebral Cortex},
+  journal   = {PLoS Biology},
+  year      = {2008},
+  volume    = {6},
+  number    = {7},
+  pages     = {e159},
+  doi       = {10.1371/journal.pbio.0060159},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
 }
 
 @Article{Harary1953,
@@ -2206,6 +2493,20 @@
   timestamp     = {2017.05.10},
 }
 
+@Article{Hou2010,
+  author    = {Hou, C. and Zhang, C. and Wu, Y. and Nie, F.},
+  title     = {Multiple view semi-supervised dimensionality reduction},
+  journal   = {Pattern Recognition},
+  year      = {2010},
+  volume    = {43},
+  number    = {3},
+  pages     = {720--730},
+  doi       = {10.1016/j.patcog.2009.07.015},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
+}
+
 @InProceedings{Hsieh2012,
   author        = {Hsieh, C.-J. and Chiang, K.-Y. and Dhillon, I. S.},
   title         = {Low rank modeling of signed networks},
@@ -2396,6 +2697,20 @@
   timestamp = {2017.03.26},
 }
 
+@Article{Jia2011,
+  author    = {Jia, Y. and Zhang, J. and Huan, J.},
+  title     = {An efficient graph-mining method for complicated and noisy data with real-world applications},
+  journal   = {Knowledge and Information Systems},
+  year      = {2011},
+  volume    = {28},
+  number    = {2},
+  pages     = {423-447},
+  doi       = {10.1007/s10115-010-0376-y},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
+}
+
 @Article{Jiang2015,
   author    = {Jiang, J. Q.},
   title     = {Stochastic Block Model and Exploratory Analysis in Signed Networks},
@@ -2411,6 +2726,20 @@
   timestamp = {2015.01.11},
 }
 
+@Article{Johnson1988,
+  author    = {Johnson, D. S. and Yannakakis, M. and Papadimitriou, C. H.},
+  title     = {On generating all maximal independent sets},
+  journal   = {Information Processing Letters},
+  year      = {1988},
+  volume    = {27},
+  number    = {3},
+  pages     = {119--123},
+  doi       = {10.1016/0020-0190(88)90065-8},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
+}
+
 @Article{Jordan2013,
   author    = {Jordan, J. J. and Rand, D. G. and Arbesman, S. and Fowler, J. H. and Christakis, N. A.},
   title     = {Contagion of cooperation in static and fluid social networks},
@@ -2424,6 +2753,17 @@
   groups    = {Graph Partitioning, Others, _To do},
   owner     = {Vincent},
   timestamp = {2017.05.25},
+}
+
+@InProceedings{Kamvar2003,
+  author    = {Kamvar, S. D. and Schlosser, M. T. and Garcia-Molina, H.},
+  title     = {The Eigentrust algorithm for reputation management in P2P networks},
+  booktitle = {12th International Conference on World Wide Web},
+  year      = {2003},
+  doi       = {10.1145/775152.775242},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
 }
 
 @Article{Kaplan2008,
@@ -2494,6 +2834,18 @@
   url         = {http://cogprints.org/3641/},
 }
 
+@Article{Kim2005a,
+  author        = {Kim, D.-H. and Jeong, H.},
+  title         = {Systematic analysis of group identification in stock markets},
+  journal       = {Physical Review E},
+  year          = {2005},
+  volume        = {72},
+  number        = {4},
+  __markedentry = {[Vincent:4]},
+  doi           = {10.1103/physreve.72.046133},
+  timestamp     = {2017.06.28},
+}
+
 @InProceedings{Kim2011a,
   author        = {Kim, S. and Nowozin, S. and Kohli, P. and Yoo, C. D.},
   title         = {Higher-order correlation clustering for image segmentation},
@@ -2506,6 +2858,20 @@
   owner         = {Vincent},
   timestamp     = {2017.05.08},
   url           = {http://dl.acm.org/citation.cfm?id=2986630},
+}
+
+@Article{Kiranyaz2009,
+  author    = {Kiranyaz, S. and Ince, T. and Yildirim, A. and Gabbouj, M.},
+  title     = {Evolutionary artificial neural networks by multi-dimensional particle swarm optimization},
+  journal   = {Neural Networks},
+  year      = {2009},
+  volume    = {22},
+  number    = {10},
+  pages     = {1448--1462},
+  doi       = {10.1016/j.neunet.2009.05.013},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
 }
 
 @Article{Kirkpatrick1987,
@@ -2536,6 +2902,32 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.27},
+}
+
+@Article{Kleinberg1999,
+  author    = {Kleinberg, J.},
+  title     = {Authoritative sources in a hyperlinked environment},
+  journal   = {Journal of the Association for Computing Machinery},
+  year      = {1999},
+  volume    = {46},
+  number    = {5},
+  pages     = {604-632},
+  doi       = {10.1145/324133.324140},
+  file      = {:Authoritative Sources in a Hyperlinked Environment.pdf:PDF},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
+}
+
+@InProceedings{Kleinberg2007,
+  author    = {Kleinberg, J. M.},
+  title     = {Challenges in mining social network data},
+  booktitle = {13th ACM/SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  year      = {2007},
+  doi       = {10.1145/1281192.1281195},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
 }
 
 @Book{Knuth1994,
@@ -2761,6 +3153,20 @@
   timestamp = {2011.06.02},
 }
 
+@Article{Lau2014,
+  author    = {Lau, R. Y. K. and Xia, Y. and Ye, Y.},
+  title     = {A Probabilistic Generative Model for Mining Cybercriminal Networks from Online Social Media},
+  journal   = {IEEE Computational Intelligence Magazine},
+  year      = {2014},
+  volume    = {9},
+  number    = {1},
+  pages     = {31-43},
+  doi       = {10.1109/mci.2013.2291689},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
+}
+
 @Article{Lemann1952,
   author        = {Lemann, T. B. and Solomon, R. L.},
   title         = {Group Characteristics as Revealed in Sociometric Patterns and Personality Ratings},
@@ -2775,6 +3181,32 @@
   groups        = {Datasets, _To do},
   owner         = {Vincent},
   timestamp     = {2017.06.01},
+}
+
+@InProceedings{Leskovec2005,
+  author    = {Leskovec, J. and Kleinberg, J. and Faloutsos, C.},
+  title     = {Graphs over Time: Densification Laws, Shrinking Diameters and Possible Explanations},
+  booktitle = {ACM SIGKDD Conference on Knowledge Discovery and Data Mining},
+  year      = {2005},
+  pages     = {177-187},
+  doi       = {10.1145/1081870.1081893},
+  file      = {:Graphs over Time- Densification Laws, Shrinking Diametersand Possible Explanations.pdf:PDF},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
+}
+
+@InProceedings{Leskovec2008a,
+  author    = {Leskovec, J. and Lang, K. J. and Dasgupta, A. and Mahoney, M. W.},
+  title     = {Statistical Properties of Community Structure in Large Social and Information Networks},
+  booktitle = {17th International Conference on World Wide Web},
+  year      = {2008},
+  pages     = {695-704},
+  doi       = {10.1145/1367497.1367591},
+  file      = {:Statistical Properties of Community Structure in Large Social and Information Network.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2010.09.10},
 }
 
 @InProceedings{Leskovec2010b,
@@ -2901,6 +3333,20 @@
   owner         = {Vincent},
   timestamp     = {2017.06.26},
   url           = {https://pdfs.semanticscholar.org/2aea/e01267a70213ae313a85fe65babafad27e4f.pdf},
+}
+
+@Article{Li2010,
+  author    = {Li, H.-F. and Huang, H.-Y. and Lee, S.-Y.},
+  title     = {Fast and memory efficient mining of high-utility itemsets from data streams: with and without negative item profits},
+  journal   = {Knowledge and Information Systems},
+  year      = {2010},
+  volume    = {28},
+  number    = {3},
+  pages     = {495-522},
+  doi       = {10.1007/s10115-010-0330-z},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
 }
 
 @InProceedings{Li2010f,
@@ -3396,6 +3842,20 @@
   url       = {https://www.scpe.org/index.php/scpe/article/view/554},
 }
 
+@Article{McPherson2001,
+  author    = {McPherson, M. and Smith-Lovin, L. and Cook, J. M.},
+  title     = {Birds of a Feather: Homophily in Social Networks},
+  journal   = {Annual Review of Sociology},
+  year      = {2001},
+  volume    = {27},
+  pages     = {415-444},
+  doi       = {10.1146/annurev.soc.27.1.415},
+  file      = {:Birds of a Feather- Homophily in Social Networks.pdf:PDF},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2011.01.07},
+}
+
 @Article{Mennes2013,
   author    = {Mennes, M. and Biswal, B. and Castellanos, F. X. and Milham, M. P.},
   title     = {Making data sharing work: The FCP/INDI experience},
@@ -3440,6 +3900,34 @@
   timestamp = {2010.06.03},
 }
 
+@Article{Moerchen2010,
+  author    = {Moerchen, F. and Thies, M. and Ultsch, A.},
+  title     = {Efficient mining of all margin-closed itemsets with applications in temporal knowledge discovery and classification by compression},
+  journal   = {Knowledge and Information Systems},
+  year      = {2010},
+  volume    = {29},
+  number    = {1},
+  pages     = {55-80},
+  doi       = {10.1007/s10115-010-0329-5},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
+}
+
+@Article{Mokken1979,
+  author    = {Mokken, R. J.},
+  title     = {Cliques, clubs and clans},
+  journal   = {Quality and Quantity},
+  year      = {1979},
+  volume    = {13},
+  pages     = {161-173},
+  doi       = {10.1007/BF00139635},
+  file      = {:Cliques, clubs and clans.pdf:PDF},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2010.12.24},
+}
+
 @Article{Molloy1995,
   author    = {Molloy, M. and Reed, B.},
   title     = {A critical point for random graphs with a given degree sequence},
@@ -3453,6 +3941,20 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2010.06.03},
+}
+
+@Article{Moon1965,
+  author    = {Moon, J. W. and Moser, L.},
+  title     = {On cliques in graphs},
+  journal   = {Israel Journal of Mathematics},
+  year      = {1965},
+  volume    = {3},
+  number    = {1},
+  pages     = {23-28},
+  doi       = {10.1007/BF02760024},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
 }
 
 @TechReport{Moscato1989,
@@ -3731,6 +4233,21 @@
   timestamp = {2017.04.09},
 }
 
+@Article{Orman2012a,
+  author    = {Orman, G. K. and Labatut, V. and Cherifi, H.},
+  title     = {Comparative Evaluation of Community Detection Algorithms: A Topological Approach},
+  journal   = {Journal of Statistical Mechanics},
+  year      = {2012},
+  volume    = {2012},
+  number    = {8},
+  pages     = {P08001},
+  doi       = {10.1088/1742-5468/2012/08/P08001},
+  file      = {:Comparative Evaluation of Community Detection Algorithms- A Topological Approach.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2012.06.21},
+}
+
 @Article{Ou2007,
   author        = {Ou, Y. and Zhang, C. Q.},
   title         = {A new multimembership clustering method},
@@ -3775,6 +4292,31 @@
   url       = {http://arxiv.org/abs/1203.1394},
 }
 
+@Article{Peters1996,
+  author    = {Peters, B. O. and Dünweg, B. and Binder, K. and d'Onorio de Meo, M. and Vollmayr, K.},
+  title     = {Finite-size scaling in the p-state mean-field Potts glass: exact statistical mechanics for small samples},
+  journal   = {Journal of Physics A},
+  year      = {1996},
+  volume    = {29},
+  number    = {13},
+  pages     = {3503-3519},
+  doi       = {10.1088/0305-4470/29/13/020},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
+}
+
+@InProceedings{Pirolli1996,
+  author    = {Pirolli, P. and Pitkow, J. and Rao, R.},
+  title     = {Silk from a sow's ear},
+  booktitle = {SIGCHI Conference on Human Factors in Computing Systems Common Ground},
+  year      = {1996},
+  doi       = {10.1145/238386.238450},
+  groups    = {Others},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
+}
+
 @InProceedings{Pizzuti2009,
   author    = {Pizzuti, C.},
   title     = {A Multi-objective Genetic Algorithm for Community Detection in Networks},
@@ -3812,6 +4354,20 @@
   groups       = {Datasets, Ignored},
   owner        = {Vincent},
   timestamp    = {2017.04.21},
+}
+
+@Article{Poria2013,
+  author    = {Poria, S. and Gelbukh, A. and Hussain, A. and Howard, N. and Das, D. and Bandyopadhyay, S.},
+  title     = {Enhanced SenticNet with Affective Labels for Concept-Based Opinion Mining},
+  journal   = {IEEE Intelligent Systems},
+  year      = {2013},
+  volume    = {28},
+  number    = {2},
+  pages     = {31-38},
+  doi       = {10.1109/mis.2013.4},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
 }
 
 @Article{Pujol2006,
@@ -3946,6 +4502,20 @@
   timestamp = {2010.06.03},
 }
 
+@Article{Reichardt2007b,
+  author    = {Reichardt, J. and White, D. R.},
+  title     = {Role Models for Complex Networks},
+  journal   = {European Physical Journal B},
+  year      = {2007},
+  volume    = {60},
+  pages     = {217-224},
+  doi       = {10.1140/epjb/e2007-00340-y},
+  file      = {:Role models for complex networks.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2010.11.22},
+}
+
 @Article{Ren2009,
   author    = {Ren, W. and Yan, G. and Liao, X. and Xiao, L.},
   title     = {Simple probabilistic algorithm for detecting community structure},
@@ -4033,6 +4603,21 @@
   url       = {https://books.google.fr/books?id=VMYQrt6fZr8C},
 }
 
+@Article{Ronhovde2009,
+  author    = {Ronhovde, P. and Nussinov, Z.},
+  title     = {Multiresolution community detection for megascale networks by information-based replica correlations},
+  journal   = {Physical Review E},
+  year      = {2009},
+  volume    = {80},
+  number    = {1},
+  pages     = {016109},
+  doi       = {10.1103/PhysRevE.80.016109},
+  file      = {:Multiresolution community detection for megascale networks by information-based replica correlations.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
+}
+
 @Article{Rosvall2008,
   author    = {Rosvall, M. and Bergstrom, C. T.},
   title     = {Maps of random walks on complex networks reveal community structure},
@@ -4046,6 +4631,21 @@
   groups    = {Graph Partitioning, Ignored},
   owner     = {Vincent},
   timestamp = {2010.06.03},
+}
+
+@Article{Rosvall2011,
+  author    = {Rosvall, M. and Bergstrom, C. T.},
+  title     = {Multilevel compression of random walks on networks reveals hierarchical organization in large integrated systems},
+  journal   = {PLoS ONE},
+  year      = {2011},
+  volume    = {6},
+  number    = {4},
+  pages     = {e18209},
+  doi       = {10.1371/journal.pone.0018209},
+  file      = {:Multilevel compression of random walks on networks reveals hierarchical organization in large integrated systems.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2011.01.01},
 }
 
 @Article{Rovira-Asenjo2013,
@@ -4116,6 +4716,20 @@
   owner     = {Vincent},
   timestamp = {2015.12.30},
   url       = {http://web.stanford.edu/~jugander/NetworksNIPS2015/papers/NIPS_Networks_2015_paper_15.pdf},
+}
+
+@Article{Santis1995,
+  author    = {de Santis, E. and Parisi, G. and Ritort, F.},
+  title     = {On the static and dynamical transition in the mean-field Potts glass},
+  journal   = {Journal of Physics A: Mathematical and General},
+  year      = {1995},
+  volume    = {28},
+  number    = {11},
+  pages     = {3025-3041},
+  doi       = {10.1088/0305-4470/28/11/008},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
 }
 
 @InProceedings{Santos2009,
@@ -4277,6 +4891,19 @@
   timestamp     = {2017.05.30},
 }
 
+@Article{Sharafi2014,
+  author    = {Sharafi, M. and ELMekkawy, T. Y.},
+  title     = {Multi-objective optimal design of hybrid renewable energy systems using PSO-simulation based approach},
+  journal   = {Renewable Energy},
+  year      = {2014},
+  volume    = {68},
+  pages     = {67-79},
+  doi       = {10.1016/j.renene.2014.01.011},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
+}
+
 @InProceedings{Sharma2009,
   author        = {Sharma, T. and Charls, A. and Singh, P. K.},
   title         = {Community Mining in Signed Social Networks -An Automated Approach},
@@ -4436,6 +5063,20 @@
   groups    = {Politics - International Relations, Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.27},
+}
+
+@Article{Solomon2000,
+  author    = {Solomon, S. and Weisbuch, G. and de Arcangelis, L. and Jan, N. and Stauffer, D.},
+  title     = {Social percolation models},
+  journal   = {Physica A},
+  year      = {2000},
+  volume    = {277},
+  number    = {1-2},
+  pages     = {239-247},
+  doi       = {10.1016/s0378-4371(99)00543-9},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
 }
 
 @Article{Sontag2007,
@@ -4642,6 +5283,20 @@
   timestamp = {2017.06.09},
 }
 
+@Article{Tarjan1972,
+  author    = {Tarjan, R.},
+  title     = {Depth-First Search and Linear Graph Algorithms},
+  journal   = {SIAM Journal on Computing},
+  year      = {1972},
+  volume    = {1},
+  number    = {2},
+  pages     = {146-160},
+  doi       = {10.1137/0201010},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
+}
+
 @Article{Taylor1967,
   author    = {Taylor, H.. F.},
   title     = {Balance and Change in The Two Person Group},
@@ -4824,6 +5479,20 @@
   url       = {http://www.informaworld.com/smpp/content~db=all~content=a713873158~frm=abslink},
 }
 
+@Article{vandenHeuvel2008,
+  author    = {van den Heuvel, L. and Mandl, R. and Pol, H. H.},
+  title     = {Normalized Cut Group Clustering of Resting-State {fMRI} Data},
+  journal   = {PLoS ONE},
+  year      = {2008},
+  volume    = {3},
+  number    = {4},
+  pages     = {e2001},
+  doi       = {10.1371/journal.pone.0002001},
+  file      = {:Normalized Cut Group Clustering of Resting-State fMRI Data.PDF:PDF},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
+}
+
 @Article{VanderWeele2010,
   author        = {VanderWeele, T. J. and Robins, J. M.},
   title         = {Signed directed acyclic graphs for causal inference},
@@ -4965,6 +5634,21 @@
   owner     = {Vincent},
   timestamp = {2017.05.22},
   url       = {https://www.transacl.org/ojs/index.php/tacl/article/view/396},
+}
+
+@Article{White2001,
+  author    = {White, D. R. and Harary, F. and Sobel, M. and Becker, M.},
+  title     = {The cohesiveness of blocks in social networks: node connectivity and conditional density},
+  journal   = {Sociological Methodology},
+  year      = {2001},
+  volume    = {31},
+  number    = {1},
+  pages     = {305-359},
+  doi       = {10.1111/0081-1750.00098},
+  file      = {:The cohesiveness of blocks in social networks- node connectivity and conditional density.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2012.08.24},
 }
 
 @Article{William2010,
